--- a/pipeline/static/CSS/style.css
+++ b/pipeline/static/CSS/style.css
@@ -1,45 +1,113 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
-html { width: 100%; height:100%; overflow:hidden; }
 
-body {
+.file-upload {
+	background-color: #1f8eb2;
+	width: 600px;
+	margin: 0 auto;
+	padding: 20px;
+  }
+  
+  .file-upload-btn {
 	width: 100%;
-	height:100%;
-	font-family: 'Helvetica';
-	background: #000;
+	margin: 0;
 	color: #fff;
-	font-size: 24px;
-	text-align:center;
-	letter-spacing:1.4px;
-
-}
-.login {
-	position: absolute;
-	top: 40%;
-	left: 50%;
-	margin: -150px 0 0 -150px;
-	width:400px;
-	height:400px;
-}
-
-.login h1 { color: #fff; text-shadow: 0 0 10px rgba(0,0,0,0.3); letter-spacing:1px; text-align:center; }
-
-input {
-	width: 100%;
-	margin-bottom: 10px;
-	background: rgba(0,0,0,0.3);
+	background: #1f8eb2;
 	border: none;
-	outline: none;
 	padding: 10px;
-	font-size: 13px;
-	color: #fff;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
-	border: 1px solid rgba(0,0,0,0.3);
 	border-radius: 4px;
-	box-shadow: inset 0 -5px 45px rgba(100,100,100,0.2), 0 1px 1px rgba(255,255,255,0.2);
-	-webkit-transition: box-shadow .5s ease;
-	-moz-transition: box-shadow .5s ease;
-	-o-transition: box-shadow .5s ease;
-	-ms-transition: box-shadow .5s ease;
-	transition: box-shadow .5s ease;
-}
+	border-bottom: 4px solid #1f8eb2;
+	transition: all .2s ease;
+	outline: none;
+	text-transform: uppercase;
+	font-weight: 700;
+  }
+  
+  .file-upload-btn:hover {
+	background: #1f8eb2;
+	color: #ffffff;
+	transition: all .2s ease;
+	cursor: pointer;
+  }
+  
+  .file-upload-btn:active {
+	border: 0;
+	transition: all .2s ease;
+  }
+  
+  .file-upload-content {
+	display: none;
+	text-align: center;
+  }
+  
+  .file-upload-input {
+	position: absolute;
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+	outline: none;
+	opacity: 0;
+	cursor: pointer;
+  }
+  
+  .image-upload-wrap {
+	margin-top: 20px;
+	border: 4px dashed #1f8eb2;
+	position: relative;
+  }
+  
+  .image-dropping,
+  .image-upload-wrap:hover {
+	background-color: #1f8eb2;
+	border: 4px dashed #ffffff;
+  }
+  
+  .image-title-wrap {
+	padding: 0 15px 15px 15px;
+	color: #222;
+  }
+  
+  .drag-text {
+	text-align: center;
+  }
+  
+  .drag-text h3 {
+	font-weight: 100;
+	text-transform: uppercase;
+	color: #1f8eb2;
+	padding: 60px 0;
+  }
+  
+  .file-upload-image {
+	max-height: 200px;
+	max-width: 200px;
+	margin: auto;
+	padding: 20px;
+  }
+  
+  .remove-image {
+	width: 200px;
+	margin: 0;
+	color: #fff;
+	background: #cd4535;
+	border: none;
+	padding: 10px;
+	border-radius: 4px;
+	border-bottom: 4px solid #b02818;
+	transition: all .2s ease;
+	outline: none;
+	text-transform: uppercase;
+	font-weight: 700;
+  }
+  
+  .remove-image:hover {
+	background: #c13b2a;
+	color: #ffffff;
+	transition: all .2s ease;
+	cursor: pointer;
+  }
+  
+  .remove-image:active {
+	border: 0;
+	transition: all .2s ease;
+  }
